fix dark mode

--- a/pages/components/Footer.module.css
+++ b/pages/components/Footer.module.css
@@ -15,7 +15,7 @@
 }
 
 .link {
-  @apply hover:underline text-blue-600 dark:text-blue-400;
+  @apply hover:underline text-gray-700 dark:text-gray-200;
 }
 
 .logo {
